--- a/public/template/index.html
+++ b/public/template/index.html
@@ -5,20 +5,28 @@
     <meta name="viewport" content="height=device-height, width=device-width, initial-scale=1.0, minimum-scale=1.0">
     <meta name="generator" content="Hugo 0.152.2">
     <meta name="generator" content="Relearn 8.2.0+926ba4d1230e27319cf62da0633eb3420e6af1bf">
-    <meta name="description" content="">
+    <meta name="robots" content="noindex, nofollow, noarchive, noimageindex">
+    <meta name="description" content="Objective Difficulty: 1/5
+Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.
+XXX mission statement Solution XXX mission debrief">
     <meta name="author" content="">
     <meta name="twitter:card" content="summary">
-    <meta name="twitter:title" content="Act 3 :: SANS Holiday Hack Challenge 2025">
-    <meta property="og:url" content="http://localhost:1313/act3/index.html">
+    <meta name="twitter:description" content="Objective Difficulty: 1/5
+Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.
+XXX mission statement Solution XXX mission debrief">
+    <meta property="og:url" content="http://localhost:1313/template/index.html">
     <meta property="og:site_name" content="SANS Holiday Hack Challenge 2025">
-    <meta property="og:title" content="Act 3 :: SANS Holiday Hack Challenge 2025">
+    <meta property="og:description" content="Objective Difficulty: 1/5
+Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.
+XXX mission statement Solution XXX mission debrief">
     <meta property="og:locale" content="en_us">
-    <meta property="og:type" content="website">
-    <meta itemprop="name" content="Act 3 :: SANS Holiday Hack Challenge 2025">
-    <meta itemprop="datePublished" content="2025-11-08T15:30:34+01:00">
-    <meta itemprop="dateModified" content="2025-11-08T15:30:34+01:00">
-    <title>Act 3 :: SANS Holiday Hack Challenge 2025</title>
-    <link href="/act3/index.xml" rel="alternate" type="application/rss+xml" title="Act 3 :: SANS Holiday Hack Challenge 2025">
+    <meta property="og:type" content="article">
+    <meta property="article:section" content="Intro">
+    <meta itemprop="description" content="Objective Difficulty: 1/5
+Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.
+XXX mission statement Solution XXX mission debrief">
+    <meta itemprop="wordCount" content="30">
+    <title></title>
     <link href="/css/auto-complete/auto-complete.min.css?1764492683" rel="stylesheet">
     <script src="/js/auto-complete/auto-complete.min.js?1764492683" defer></script>
     <script src="/js/search-lunr.js?1764492683" defer></script>
@@ -43,7 +51,7 @@
       window.relearn = window.relearn || {};
       // configuration
       window.relearn.min = ``;
-      window.relearn.path='\/act3\/index.html';
+      window.relearn.path='\/template\/index.html';
       window.relearn.relBasePath='..';
       window.relearn.relBaseUri='..';
       window.relearn.absBaseUri='http:\/\/localhost:1313';
@@ -93,7 +101,7 @@
       window.relearn.markVariant();
     </script>
   </head>
-  <body class="mobile-support html" data-url="/act3/index.html">
+  <body class="mobile-support html" data-url="/template/index.html">
     <div id="R-body" class="default-animation">
       <div id="R-body-overlay"></div>
       <nav id="R-topbar">
@@ -106,16 +114,24 @@
             <div class="topbar-button topbar-button-toc" data-content-empty="hide" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle interactive"><button onclick="toggleTopbarFlyout(this)" type="button" title="Table of Contents (CTRL&#43;ALT&#43;t)"><i class="fa-fw fas fa-list-alt"></i></button></span>
               <div class="topbar-content">
-                <div class="topbar-content-wrapper"> 
+                <div class="topbar-content-wrapper">
+<nav class="TableOfContents">
+  <ul>
+    <li><a href="#objective">Objective</a></li>
+    <li><a href="#xxx-mission-statement">XXX mission statement</a></li>
+    <li><a href="#solution">Solution</a></li>
+    <li><a href="#xxx-mission-debrief">XXX mission debrief</a></li>
+  </ul>
+</nav>
                 </div>
               </div>
             </div>
           </div>
-          <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement" class=""><a itemprop="item" href="/index.html"><span itemprop="name">Intro</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li><li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement" class=""><span itemprop="name">Act 3</span><meta itemprop="position" content="2"></li>
+          <ol class="topbar-breadcrumbs breadcrumbs highlightable" itemscope itemtype="http://schema.org/BreadcrumbList"><li itemscope itemtype="https://schema.org/ListItem" itemprop="itemListElement" class=""><a itemprop="item" href="/index.html"><span itemprop="name">Intro</span></a><meta itemprop="position" content="1">&nbsp;>&nbsp;</li>
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act2/going-in-reverse/index.html" title="Going in Reverse (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act3/index.html" title="Act 3 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle"><span><i class="fa-fw fas fa-chevron-right"></i></span></span>
@@ -133,17 +149,30 @@
         </div>
       </nav>
       <div id="R-main-overlay"></div>
-      <main id="R-body-inner" class="highlightable act3" tabindex="-1">
+      <main id="R-body-inner" class="highlightable page" tabindex="-1">
         <div class="flex-block-wrapper">
 <article class="default">
   <header class="headline">
   </header>
 
-<h1 id="act-3">Act 3</h1>
+<h1 id=""></h1>
 
+<p><a href="#R-image-4bd61b8908eb4657e96e5f22171ea7d0" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/xxx-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-4bd61b8908eb4657e96e5f22171ea7d0"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/xxx-avatar.gif"></a></p>
+<h2 id="objective">Objective</h2>
+<p>Difficulty: 1/5</p>
+<p>Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.</p>
+<h2 id="xxx-mission-statement">XXX mission statement</h2>
+<blockquote>
+</blockquote>
+<h2 id="solution">Solution</h2>
+<p><a href="#R-image-af60f20f55adcc0d11f3bbae2b1c93de" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-af60f20f55adcc0d11f3bbae2b1c93de"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
+<h2 id="xxx-mission-debrief">XXX mission debrief</h2>
+<blockquote>
+</blockquote>
 
   <footer class="footline">
-              <i class='fa-fw fas fa-calendar'></i> Nov 8, 2025
   </footer>
 </article>
         </div>
@@ -191,7 +220,8 @@
           <ul class="enlarge morespace collapsible-menu">
             <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
-            <li class="active " data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="active hidden " data-nav-url="/template/index.html"><a class="padding" href="/template/index.html"></a></li>
           </ul>
         </div>
         <div class="R-sidebarmenu R-shortcutmenu-shortcuts">
