--- a/public/template/index.html
+++ b/public/template/index.html
@@ -27,26 +27,26 @@ Skate over to Jared at the frozen pond for some network magic and learn the rope
 XXX mission statement Solution XXX mission debrief">
     <meta itemprop="wordCount" content="30">
     <title></title>
-    <link href="/css/auto-complete/auto-complete.min.css?1764499442" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1764499442" defer></script>
-    <script src="/js/search-lunr.js?1764499442" defer></script>
-    <script src="/js/search.js?1764499442" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1764499964" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1764499964" defer></script>
+    <script src="/js/search-lunr.js?1764499964" defer></script>
+    <script src="/js/search.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1764499442";
+      window.relearn.index_js_url="/searchindex.en.js?1764499964";
     </script>
-    <script src="/js/lunr/lunr.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1764499442" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1764499442" defer></script>
+    <script src="/js/lunr/lunr.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1764499964" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1764499964" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499442" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499442" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499442" rel="stylesheet">
-    <link href="/css/theme.css?1764499442" rel="stylesheet">
-    <link href="/css/format-html.css?1764499442" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1764499964" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1764499964" rel="stylesheet">
+    <link href="/css/theme.css?1764499964" rel="stylesheet">
+    <link href="/css/format-html.css?1764499964" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -131,7 +131,7 @@ XXX mission statement Solution XXX mission debrief">
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act3/index.html" title="Act 3 (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/act3/free-ski/index.html" title="Free Ski (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle"><span><i class="fa-fw fas fa-chevron-right"></i></span></span>
@@ -157,8 +157,8 @@ XXX mission statement Solution XXX mission debrief">
 
 <h1 id=""></h1>
 
-<p><a href="#R-image-4bd61b8908eb4657e96e5f22171ea7d0" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/xxx-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-4bd61b8908eb4657e96e5f22171ea7d0"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/xxx-avatar.gif"></a></p>
+<p><a href="#R-image-ae321fa087b24d803a7aa8a399f07298" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/xxx-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-ae321fa087b24d803a7aa8a399f07298"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/xxx-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.</p>
@@ -166,8 +166,8 @@ XXX mission statement Solution XXX mission debrief">
 <blockquote>
 </blockquote>
 <h2 id="solution">Solution</h2>
-<p><a href="#R-image-af60f20f55adcc0d11f3bbae2b1c93de" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-af60f20f55adcc0d11f3bbae2b1c93de"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
+<p><a href="#R-image-9ccd716dcbe05934c0fc33065ecec56f" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-9ccd716dcbe05934c0fc33065ecec56f"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
 <h2 id="xxx-mission-debrief">XXX mission debrief</h2>
 <blockquote>
 </blockquote>
@@ -220,7 +220,7 @@ XXX mission statement Solution XXX mission debrief">
           <ul class="enlarge morespace collapsible-menu">
             <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
-            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a></li>
+            <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
             <li class="active hidden " data-nav-url="/template/index.html"><a class="padding" href="/template/index.html"></a></li>
           </ul>
         </div>
@@ -239,8 +239,8 @@ XXX mission statement Solution XXX mission debrief">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1764499442" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499442" defer></script>
-    <script src="/js/theme.js?1764499442" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1764499964" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1764499964" defer></script>
+    <script src="/js/theme.js?1764499964" defer></script>
   </body>
 </html>
