--- a/public/template/index.html
+++ b/public/template/index.html
@@ -27,26 +27,26 @@ Skate over to Jared at the frozen pond for some network magic and learn the rope
 XXX mission statement Solution XXX mission debrief">
     <meta itemprop="wordCount" content="30">
     <title></title>
-    <link href="/css/auto-complete/auto-complete.min.css?1765708942" rel="stylesheet">
-    <script src="/js/auto-complete/auto-complete.min.js?1765708942" defer></script>
-    <script src="/js/search-lunr.js?1765708942" defer></script>
-    <script src="/js/search.js?1765708942" defer></script>
+    <link href="/css/auto-complete/auto-complete.min.css?1766493084" rel="stylesheet">
+    <script src="/js/auto-complete/auto-complete.min.js?1766493084" defer></script>
+    <script src="/js/search-lunr.js?1766493084" defer></script>
+    <script src="/js/search.js?1766493084" defer></script>
     <script>
       window.relearn = window.relearn || {};
-      window.relearn.index_js_url="/searchindex.en.js?1765708942";
+      window.relearn.index_js_url="/searchindex.en.js?1766493084";
     </script>
-    <script src="/js/lunr/lunr.min.js?1765708942" defer></script>
-    <script src="/js/lunr/lunr.stemmer.support.min.js?1765708942" defer></script>
-    <script src="/js/lunr/lunr.multi.min.js?1765708942" defer></script>
-    <script src="/js/lunr/lunr.en.min.js?1765708942" defer></script>
+    <script src="/js/lunr/lunr.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.stemmer.support.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.multi.min.js?1766493084" defer></script>
+    <script src="/js/lunr/lunr.en.min.js?1766493084" defer></script>
     <script>
       window.relearn = window.relearn || {};
       window.relearn.contentLangs=['en'];
     </script>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1765708942" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1765708942" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1765708942" rel="stylesheet">
-    <link href="/css/theme.css?1765708942" rel="stylesheet">
-    <link href="/css/format-html.css?1765708942" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766493084" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766493084" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766493084" rel="stylesheet">
+    <link href="/css/theme.css?1766493084" rel="stylesheet">
+    <link href="/css/format-html.css?1766493084" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -131,7 +131,7 @@ XXX mission statement Solution XXX mission debrief">
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/act3/free-ski/index.html" title="Free Ski (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/endgame/index.html" title="Endgame (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle"><span><i class="fa-fw fas fa-chevron-right"></i></span></span>
@@ -157,8 +157,8 @@ XXX mission statement Solution XXX mission debrief">
 
 <h1 id=""></h1>
 
-<p><a href="#R-image-cf69b72d3c67ab7673ea2532a9169c6b" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/xxx-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cf69b72d3c67ab7673ea2532a9169c6b"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/xxx-avatar.gif"></a></p>
+<p><a href="#R-image-e513c9a53547c569ed4d794055099121" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/xxx-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-e513c9a53547c569ed4d794055099121"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/xxx-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.</p>
@@ -166,8 +166,8 @@ XXX mission statement Solution XXX mission debrief">
 <blockquote>
 </blockquote>
 <h2 id="solution">Solution</h2>
-<p><a href="#R-image-cb36b767f519a80b33d8a8ab98c62b78" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-cb36b767f519a80b33d8a8ab98c62b78"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
+<p><a href="#R-image-6e9d9f437d1317f07991d43937f28e9d" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-6e9d9f437d1317f07991d43937f28e9d"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
 <h2 id="xxx-mission-debrief">XXX mission debrief</h2>
 <blockquote>
 </blockquote>
@@ -221,6 +221,7 @@ XXX mission statement Solution XXX mission debrief">
             <li class="" data-nav-url="/act1/index.html"><a class="padding" href="/act1/index.html">Act 1</a><ul id="R-subsections-8dc0c36ceefa45529ff4cf1f9bdc1f66" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
+            <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
             <li class="active hidden " data-nav-url="/template/index.html"><a class="padding" href="/template/index.html"></a></li>
           </ul>
         </div>
@@ -239,8 +240,8 @@ XXX mission statement Solution XXX mission debrief">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1765708942" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1765708942" defer></script>
-    <script src="/js/theme.js?1765708942" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766493084" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766493084" defer></script>
+    <script src="/js/theme.js?1766493084" defer></script>
   </body>
 </html>
