--- a/public/template/index.html
+++ b/public/template/index.html
@@ -27,10 +27,10 @@ Skate over to Jared at the frozen pond for some network magic and learn the rope
 XXX mission statement Solution XXX mission debrief">
     <meta itemprop="wordCount" content="30">
     <title></title>
-    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766505382" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766505382" rel="stylesheet"></noscript>
-    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766505382" rel="stylesheet">
-    <link href="/css/theme.css?1766505382" rel="stylesheet">
-    <link href="/css/format-html.css?1766505382" rel="stylesheet" id="R-format-style">
+    <link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet" media="print" onload="this.media='all';this.onload=null;"><noscript><link href="/fonts/fontawesome/css/fontawesome-all.min.css?1766509179" rel="stylesheet"></noscript>
+    <link href="/css/perfect-scrollbar/perfect-scrollbar.min.css?1766509179" rel="stylesheet">
+    <link href="/css/theme.css?1766509179" rel="stylesheet">
+    <link href="/css/format-html.css?1766509179" rel="stylesheet" id="R-format-style">
     <script>
       window.relearn = window.relearn || {};
       // configuration
@@ -115,7 +115,7 @@ XXX mission statement Solution XXX mission debrief">
           </ol>
           <div class="topbar-area topbar-area-end" data-area="end">
             <div class="topbar-button topbar-button-prev" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
-<span class="btn cstyle link noborder notitle interactive"><a href="/endgame/index.html" title="Endgame (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
+<span class="btn cstyle link noborder notitle interactive"><a href="/about/index.html" title="About Roger Johnsen (🡐)"><i class="fa-fw fas fa-chevron-left"></i></a></span>
             </div>
             <div class="topbar-button topbar-button-next" data-content-empty="disable" data-width-s="show" data-width-m="show" data-width-l="show">
 <span class="btn cstyle link noborder notitle"><span><i class="fa-fw fas fa-chevron-right"></i></span></span>
@@ -141,8 +141,8 @@ XXX mission statement Solution XXX mission debrief">
 
 <h1 id=""></h1>
 
-<p><a href="#R-image-a9d72b445e9b79215ae4886bde53724b" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/xxx-avatar.gif" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-a9d72b445e9b79215ae4886bde53724b"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/xxx-avatar.gif"></a></p>
+<p><a href="#R-image-b7c9cec017bf13474de01841178ec9c5" class="lightbox-link"><img alt="XXX" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/xxx-avatar.gif" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-b7c9cec017bf13474de01841178ec9c5"><img alt="XXX" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/xxx-avatar.gif"></a></p>
 <h2 id="objective">Objective</h2>
 <p>Difficulty: 1/5</p>
 <p>Skate over to Jared at the frozen pond for some network magic and learn the ropes by the hockey rink.</p>
@@ -150,8 +150,8 @@ XXX mission statement Solution XXX mission debrief">
 <blockquote>
 </blockquote>
 <h2 id="solution">Solution</h2>
-<p><a href="#R-image-de3895699f69d3025a9b421c27c916e8" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
-<a href="javascript:history.back();" class="lightbox-back" id="R-image-de3895699f69d3025a9b421c27c916e8"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
+<p><a href="#R-image-f9455478774bac4686bb4af664263f10" class="lightbox-link"><img alt="Solution" class="lazy lightbox figure-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png" style="height: auto;width: auto;"></a>
+<a href="javascript:history.back();" class="lightbox-back" id="R-image-f9455478774bac4686bb4af664263f10"><img alt="Solution" class="lazy lightbox lightbox-image" loading="lazy" src="/images/act1/visual-network-thinger-1.png"></a></p>
 <h2 id="xxx-mission-debrief">XXX mission debrief</h2>
 <blockquote>
 </blockquote>
@@ -198,6 +198,7 @@ XXX mission statement Solution XXX mission debrief">
             <li class="" data-nav-url="/act2/index.html"><a class="padding" href="/act2/index.html">Act 2</a><ul id="R-subsections-9d3d8c898368693a495088de36411fa6" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/act3/index.html"><a class="padding" href="/act3/index.html">Act 3</a><ul id="R-subsections-0b6215c9fad834351813cc2ad0d4a335" class="collapsible-menu"></ul></li>
             <li class="" data-nav-url="/endgame/index.html"><a class="padding" href="/endgame/index.html">Endgame</a></li>
+            <li class="" data-nav-url="/about/index.html"><a class="padding" href="/about/index.html">About Roger Johnsen</a></li>
             <li class="active hidden " data-nav-url="/template/index.html"><a class="padding" href="/template/index.html"></a></li>
           </ul>
         </div>
@@ -216,8 +217,8 @@ XXX mission statement Solution XXX mission debrief">
 <div id="R-footer"><p>Built with <a href="https://github.com/McShelby/hugo-theme-relearn" title="love"><i class="fas fa-heart"></i></a> by <a href="https://gohugo.io/">Hugo</a></p></div>
       </div>
     </aside>
-    <script src="/js/clipboard/clipboard.min.js?1766505382" defer></script>
-    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766505382" defer></script>
-    <script src="/js/theme.js?1766505382" defer></script>
+    <script src="/js/clipboard/clipboard.min.js?1766509179" defer></script>
+    <script src="/js/perfect-scrollbar/perfect-scrollbar.min.js?1766509179" defer></script>
+    <script src="/js/theme.js?1766509179" defer></script>
   </body>
 </html>
